outputs_20260330-035133-01ba2c4b/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:45:23: error: 'IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT' undeclared (first use in this function)
   45 | #define PHASE_U_HS  (&IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT)
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:109:62: note: in expansion of macro 'PHASE_U_HS'
  109 |     output[0].pin                   = (IfxEgtm_Pwm_ToutMap *)PHASE_U_HS;
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:45:23: note: each undeclared identifier is reported only once for each function it appears in
   45 | #define PHASE_U_HS  (&IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT)
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:109:62: note: in expansion of macro 'PHASE_U_HS'
  109 |     output[0].pin                   = (IfxEgtm_Pwm_ToutMap *)PHASE_U_HS;
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:46:23: error: 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT' undeclared (first use in this function)
   46 | #define PHASE_U_LS  (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT)
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:110:62: note: in expansion of macro 'PHASE_U_LS'
  110 |     output[0].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS;
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:47:23: error: 'IfxEgtm_ATOM0_1_TOUT55_P21_4_OUT' undeclared (first use in this function)
   47 | #define PHASE_V_HS  (&IfxEgtm_ATOM0_1_TOUT55_P21_4_OUT)
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:116:62: note: in expansion of macro 'PHASE_V_HS'
  116 |     output[1].pin                   = (IfxEgtm_Pwm_ToutMap *)PHASE_V_HS;
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:48:23: error: 'IfxEgtm_ATOM0_1N_TOUT67_P20_11_OUT' undeclared (first use in this function)
   48 | #define PHASE_V_LS  (&IfxEgtm_ATOM0_1N_TOUT67_P20_11_OUT)
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:117:62: note: in expansion of macro 'PHASE_V_LS'
  117 |     output[1].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_V_LS;
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:49:23: error: 'IfxEgtm_ATOM0_2_TOUT68_P20_12_OUT' undeclared (first use in this function)
   49 | #define PHASE_W_HS  (&IfxEgtm_ATOM0_2_TOUT68_P20_12_OUT)
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:123:62: note: in expansion of macro 'PHASE_W_HS'
  123 |     output[2].pin                   = (IfxEgtm_Pwm_ToutMap *)PHASE_W_HS;
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:50:23: error: 'IfxEgtm_ATOM0_2N_TOUT69_P20_13_OUT' undeclared (first use in this function)
   50 | #define PHASE_W_LS  (&IfxEgtm_ATOM0_2N_TOUT69_P20_13_OUT)
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_h2qdelbv\src\egtm_atom_3_phase_inverter_pwm.c:124:62: note: in expansion of macro 'PHASE_W_LS'
  124 |     output[2].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_W_LS;
      |                                                              ^~~~~~~~~~
